Mobile base look fix + scrollbars for Mint

--- a/mint.css
+++ b/mint.css
@@ -70,7 +70,6 @@ textarea:focus-visible {
 output{
     display: flex;
     background: #515151;
-    padding: 1em;
     border: 1px solid #202020;
     margin: 0 8px 8px 4px;
     padding: 12px;
@@ -85,13 +84,47 @@ output>span.katex {
 }
 
 @media (orientation: portrait) {
-    textarea{
+    textarea, output{
         margin: 0 8px 4px 8px;
         width: calc(100% - 40px);
     }
+}
 
-    output{
-        margin: 0 8px 4px 8px;
-        width: calc(100% - 40px);
+@supports (scrollbar-color: auto){
+    output {
+        scrollbar-color: #777 #3d3d3d;
+    }
+    @supports selector(::-webkit-scrollbar){
+        output {
+            scrollbar-color: auto;
+        }
+    }
+}
+
+@supports selector(::-webkit-scrollbar) {
+    output::-webkit-scrollbar {
+        width: 12px;
+        height: 12px;
+    }
+    
+    output::-webkit-scrollbar-track {
+        background: #3d3d3d;
+    }
+    
+    output::-webkit-scrollbar-thumb {
+        height: 6px !important;
+        width: 6px;
+        margin: 2px;
+        background: #777 content-box;
+        border-radius: 6px;
+        border: 3px solid #fff0;
+    }
+    
+    output::-webkit-scrollbar-thumb:hover {
+        background-color: #676767;
+    }
+    
+    output::-webkit-scrollbar-corner {
+        background-color: #3d3d3d;
     }
 }
