--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 html, body{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    @supports (width: 100vh){
+        width: 100vw;
+        height: 100vh;
+    }
+    @supports (width: 100svh){
+        width: 100svw;
+        height: 100svh;
+    }
     margin: 0;
     display: flex;
     flex-flow: column wrap;
@@ -18,20 +26,19 @@ header{
 
 main{
     display: grid;
-    height: calc(100vh - 60px);
-    width: 100%;
-}
-@media (orientation: landscape) {
-    main{
+    @media (orientation: landscape) {
         grid-template-columns: 50% 50%;
     }
-}
-@media (orientation: portrait) {
-    main{
+    @media (orientation: portrait) {
         grid-template-rows: 50% 50%;
     }
+    height: calc(100vh - 60px);
+    width: 100%;
 }
 
 textarea {
     resize: none;
+    @media (orientation: portrait) {
+        order: 1;
+    }
 }
